# src/modules/pokemon/pokemon.controller.ts
@@ -1,26 +1,21 @@
 import { initORM } from "../../db.js";
+import { HEADER_TOTAL_COUNT } from "../../constants.js";
 
 const db = await initORM();
 
 export async function getPokemons(req, resp) {
-  // console.log("getPokemons", req.params.petId);
-  if (req.params.petId === 0) {
-    // missing required data on purpose !
-    // this will trigger a server error on serialization
-    return { pet: "Doggie the dog" };
-  }
-  return {
-    // id: 1,
-    // name: "Kitty the cat",
-    
-  };
+  const { limit, offset } = req.query as { limit?: number; offset?: number };
+  const [pokemons, total] = await db.pokemon.findAndCount({ }, { limit, offset, populate: ["weight", "height", "evolutionRequirements", "types", "resistant", "weaknesses", "evolutions"] });
+  resp.header(HEADER_TOTAL_COUNT, total);
+  console.log(pokemons);
+  return pokemons;
 }
 
 export async function getPokemon(req, resp) {
   // try {
     const pokemon = await db.pokemon.findOneOrFail({ id: req.params.pokemonId }, { populate: ["weight", "height", "evolutionRequirements", "types", "resistant", "weaknesses", "evolutions"] });
     console.log(pokemon);
-    return pokemon;
+    return pokemon.output();
   // } catch (error) {
     // if (error.name === "NotFoundError") error.statusCode = 404;
     // throw error;
